[package]
name = "github-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI to create a GitHub repository from a template"
repository = ""

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.7"

